subida de imagenes

--- a/spring-boot-backend-apirest/src/main/resources/application.properties
+++ b/spring-boot-backend-apirest/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
+
+#Configirar locale
+spring.jackson.time-zone=America/Bogota
+spring.jackson.locale=es_CO
+
+#Configurar el tamaño de la subida foto
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
